
if( "$ENV{ENABLE_EMS}" STREQUAL "1" )
    add_executable( native_app native_app.cpp )
    target_link_libraries( native_app tibems64 boost_system pthread )
    add_executable( lua_app lua_app.cpp )
    target_link_libraries( lua_app tibems64 lua boost_system pthread )
else()
    add_executable( native_app native_app.cpp )
    target_link_libraries( native_app boost_system pthread )
    add_executable( lua_app lua_app.cpp )
    target_link_libraries( lua_app lua boost_system pthread )
endif()
